--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -12,7 +12,7 @@
     </div>
     <div class="lskd7443">
         <form class="jdre9362" id="fiwd9297" action="#" method="post">
-            <h3 class="heading" id="headingid">Please register here ...</h3>
+            <h3 class="heading" id="drew2975">Please register here ...</h3>
             <marquee behavior="move" direction="left">This website is created by Eng. 
                 Haruna Auwalu, professions in electrical and electronics engineering 
                 (electronics option), and also in Software enginnering (speciallized in 
@@ -23,6 +23,6 @@
             </div>
         </form>
     </div>
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
