This is the commited changes on my javascript repo

--- a/website/index.html
+++ b/website/index.html
@@ -7,22 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="h"></div>
-    <div class="dkwe9211">
-    </div>
+    <header class="dkwe9211">
+        <nav>
+            <h1 class="logo">HANCHO</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Software</a></li>
+                <li><a href="#">Hardware</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="lskd7443">
         <form class="jdre9362" id="fiwd9297" action="#" method="post">
             <h3 class="heading" id="drew2975">Please register here ...</h3>
-            <marquee behavior="move" direction="left">This website is created by Eng. 
-                Haruna Auwalu, professions in electrical and electronics engineering 
-                (electronics option), and also in Software enginnering (speciallized in 
-                backend), rised in Nigeria, Kano state...
-            </marquee>
             <div class="jdge7354">
                 <input class="kdue2552" type="password" placeholder="Please enter your password">
             </div>
         </form>
     </div>
+    <div>
+    <marquee behavior="move" direction="left">This website is created by Eng. 
+        Haruna Auwalu, professions in electrical and electronics engineering 
+        (electronics option), and also in Software enginnering (speciallized in 
+        backend), rised in Nigeria, Kano state...
+    </marquee>
+    <hr>
+    </div>
+    <footer class="foot8364"></footer>
     <script src="scripts/script.js"></script>
 </body>
 </html>
